# cbox

./: .gitignore  CMakeLists.txt  Makefile
cmake/: FindOrAdd.cmake  Module.cmake  cboxConfig.cmake.in
dataset/: scene.scn
modules/core/: CMakeLists.txt
modules/core/include/cbox/core/: error.hpp
modules/core/src/: error.cpp
modules/graphics/: CMakeLists.txt
modules/graphics/backends/gl/buffer/: buffer.cpp  buffer.hpp
modules/graphics/backends/gl/commands/: command_buffer.cpp  command_buffer.hpp
modules/graphics/backends/gl/device/: device.cpp  device.hpp
modules/graphics/src/commands/: command_buffer.cpp  render_pass.cpp
modules/graphics/src/context/: context.cpp
modules/graphics/src/framebuffer/: attachment.cpp  framebuffer.cpp
modules/graphics/src/pipeline/: blend.cpp  depth_stencil.cpp  pipeline.cpp  rasterizer.cpp  vlayout.cpp
modules/graphics/src/resources/: buffer.cpp  mesh.cpp  sampler.cpp  texture.cpp
modules/graphics/src/scene/: camera.cpp  matrial.cpp
modules/graphics/src/shader/: compiler.cpp  module.cpp  parser.cpp  reflection.cpp
modules/graphics/src/swapchain/: swapchain.cpp
modules/graphics/src/window/: window.cpp
modules/io/: CMakeLists.txt
modules/io/src/stream/: fstream.cpp
modules/math/: CMakeLists.txt
modules/vision/: CMakeLists.txt
scripts/: blender.py
studio/: CMakeLists.txt
studio/resources/shaders/: simple.frag  simple.vert  texture.frag  texture.vert  textured.frag  textured.vert  transform.frag  transform.vert  uv_debug.frag  uv_debug.vert  vertex.frag  vertex.vert
studio/src/: main.cpp
(+50 files in other folders)
