cmake_minimum_required(VERSION 3.30)

set(TARGET_VERSION 0.0.1)

project(cbox
    VERSION ${TARGET_VERSION}
    DESCRIPTION "Computer vision and motion tracking library"
    LANGUAGES CXX
)

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS ON)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_POSITION_INDEPENDENT_CODE ON)

list(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")

set(ROOT_DIR ${CMAKE_CURRENT_SOURCE_DIR})
set(MODULES_DIR ${CMAKE_CURRENT_SOURCE_DIR}/modules)
set(BINARY_DIR ${CMAKE_CURRENT_BINARY_DIR})

add_subdirectory(studio)
